--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/selector.css">
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="schedule-app"></div>
   </body>
 </html>
