--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/selector.css">
-    <title>React App</title>
+    <link rel="stylesheet" href="styles/visual.css">
+    <title>Schedule App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
